--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </div>
                 <div id="link" class="col">
                     <a href="https://github.com/nurzaman_now" class="btn btn-light">
-                    <img class="sosmed" src="img/social/svg/039-github.svg">GutHub</a>
+                    <img class="sosmed" src="img/social/svg/039-github.svg">GitHub</a>
                 </div>
                 <div id="link" class="col">
                     <a href="https://twitter.com/imanNur42934073" class="btn btn-light">
