--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <img class="sosmed" src="img/social/svg/telegram.svg">Telegram</a>
                 </div>
                 <div id="link" class="col">
-                    <a href="https://github.com/nurzaman_now" class="btn btn-light">
+                    <a href="https://github.com/nurzaman-now" class="btn btn-light">
                     <img class="sosmed" src="img/social/svg/039-github.svg">GitHub</a>
                 </div>
                 <div id="link" class="col">
