--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
             <div class="row" align="center">
                 <div class="col">
-                <div class="line"></div>
+                <div class="line" style="width:160px;"></div>
                 </div>
             </div>
             <div class="row">
