--- a/index.html
+++ b/index.html
@@ -110,6 +110,18 @@
                 <div class="col-md">
                     <div class="thumbnail">
                         <div class="card">
+                        <img src="img/thumbs/3.png" class="card-img-top" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Yayasan Sawanggati YAGATI</h5>
+                                <p class="card-text">Pondok Pesantren Miftahum Mubtadi'ien berdiri tahun 2018 dan bertempatan di Desa bentarsari Kec.Salem Kab. Brebes</p>
+                                <a href="#" class="btn btn-primary">review</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="thumbnail">
+                        <div class="card">
                         <img src="img/thumbs/2.png" class="card-img-top" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Empty</h5>
