--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Yayasan Sawanggati YAGATI</h5>
                                 <p class="card-text">Pondok Pesantren Miftahum Mubtadi'ien berdiri tahun 2018 dan bertempatan di Desa bentarsari Kec.Salem Kab. Brebes</p>
-                                <a href="nurzaman-now.github.io/PonPes" class="btn btn-primary">review</a>
+                                <a href="https://nurzaman-now.github.io/PonPes" class="btn btn-primary">review</a>
                             </div>
                         </div>
                     </div>
