--- a/index.html
+++ b/index.html
@@ -14,15 +14,42 @@
     <title>Nurz</title>
   </head>
   <body>
-    <div id="header" class="jumbotron jumbotron-fluid  text-white">
-        <div class="container text-center mb-2">
+ <!--<div class="preloader">
+        <div class="loading text-center">
+          <img src="img/icon.png" width="120px">
+          <div style="margin: 20px;">
+          <div class="spinner-border spinner-border-sm" role="status">
+            <span class="sr-only">Loading...</span>
+          </div>
+          <div class="spinner-grow spinner-grow-sm" role="status">
+            <span class="sr-only">Loading...</span>
+          </div>
+          </div>
+        </div>
+    </div>-->
+    <div class="header">
+      <div class="inner-header">
             <img src="img/profile.png" width="200" class="shadow m-5 bg-white rounded-circle">
             <h3 class="display-4 ">Iman Nurjaman</h3>
           <p class="lead">Collage Student | Desainer</p>
-        </div>
       </div>
-    
-        <div class="container">
+      <div>
+        <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+        viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+        <defs>
+        <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+        </defs>
+        <g class="parallax">
+        <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7" />
+        <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
+        <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
+        <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
+        </g>
+        </svg>
+      </div>
+      </div>
+
+        <div class="container" style="background: transparent;  z-index: 99; margin-top: 80px;">
             <div class="row"  style="margin-left: 20px; margin-right: 20px;" align="center">
                 <div id="link" class="col">
                     <a href="https://wa.me/qr/USRSLR5QEAHJF1" class="btn btn-light">
@@ -134,12 +161,13 @@
             </div>
         </div>
         </section>
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-    <script src="js/index.js"></script>
+    <script src="js/index copy.js"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
