--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
       </div>
 
-        <div class="container" style="background: #fff;  z-index: 99; margin-top: 40px;">
+        <div class="container" style="background-color: #fff;  z-index: 99; margin-top: 40px;">
             <div class="row"  style="margin-left: 20px; margin-right: 20px;" align="center">
                 <div id="link" class="col">
                     <a href="https://wa.me/qr/USRSLR5QEAHJF1" class="btn btn-light">
